data/derived/comb/progs/unify/prog7755.ml.out
Characters 87-104:
  [n mod 10] :: digitsOfIntHelper [((n mod 10)/10)];;
                                  ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
